cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: maartenjan
spec:
  rules:
    - host: "maartenjan.lion7.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/company"
            backend:
              service:
                name: company
                port:
                  number: 8080
    - host: "maartenjan.lion7.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/employee"
            backend:
              service:
                name: employee
                port:
                  number: 8080
